Draft of Testing Section (#12)
* Start of testing draft.

* Draft of metaparse error testing completed.

* Completed testing examples drafts.

* Completed draft for the testing section.

--- a/doc/dissertation/resources/absol_test_file.tex
+++ b/doc/dissertation/resources/absol_test_file.tex
@@ -1,3 +1,10 @@
+\chapter{The ABSOL Testing File} % (fold)
+\label{cha:the_absol_testing_file}
+This appendix contains the test file used to check the functionality of the metacompiler both during and after its development. 
+The file is contained in the following listing and defines a toy language that doesn't do anything useful.
+Its main intention is to test the parsing functionality of \gls{absol}, as well as the semantic verification facilities. 
+
+\begin{minted}[fontsize=\blockfont]{text}
 // Language metadata
 name : simple_test;
 
@@ -79,3 +86,7 @@ language : {
 };
 
 };
+
+\end{minted}
+
+% chapter the_absol_testing_file (end)
