--- a/doc/dissertation/resources/bath_dissertation_definitions.tex
+++ b/doc/dissertation/resources/bath_dissertation_definitions.tex
@@ -77,8 +77,8 @@
     Except where specifically acknowledged, it is the work of the author.
   \end{spaced}
 
-  \begin{spaced}{5em}
-    Signed:
+  \begin{spaced}{1em}
+    Signed:\hspace{0.5cm}\includegraphics[width=4cm]{resources/images/ara_signature.png}
   \end{spaced}
   }
 
@@ -100,9 +100,9 @@ years
 \fi
 from the date of submission of the dissertation.
 \fi
-\vspace{4em}
+\vspace{1em}
 
-Signed:
+Signed: \hspace{0.5cm}\includegraphics[width=4cm]{resources/images/ara_signature.png}
 \end{centrespaced}
 }
 
