--- a/doc/dissertation/resources/elucidation_requirements.tex
+++ b/doc/dissertation/resources/elucidation_requirements.tex
@@ -194,6 +194,7 @@ This disjunction means that the problem is slightly more difficult, involving ch
 \subsubsection{Guard Completeness and Project Scope} % (fold)
 \label{ssub:guard_completeness_and_project_scope}
 Unfortunately the implementation of such a completeness checker would add significant complexity to an already complex project, and as such is considered as out of scope.
+This complexity was not appreciated initially due to insufficient research having been performed into the problem, and so it remained within the project scope for a significant amount of time. 
 Nevertheless, it is an important and interesting problem to be solved as part of the future work.\\
 
 This is not to imply that the guards will remain unchecked in the language, as that would admit possible non-termination due to no semantics existing for some evaluations.
