--- a/doc/dissertation/resources/acknowledgements.tex
+++ b/doc/dissertation/resources/acknowledgements.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{Acknowledgements}
 Many thanks to the following people without whom this project would not have been completed:
 \begin{itemize}
-    \item \textbf{Guy McCusker:} Without whose insight, guidance, support and enthusiasm, the project would not have been possible. 
+    \item \textbf{Guy McCusker:} Without whose insight, guidance, support and enthusiasm, the project would not have been possible or anywhere near as enjoyable.
     \item \textbf{Wyeth Wolnick:} Whose interest, questions and loving support has led to the solutions to many challenges.
     \item \textbf{Willem Heijltjes:} Whose kind willingness to discuss abstract Haskell topics has been crucial.
     \item \textbf{Damask Talary-Brown:} Whose faith and confidence in the project's success has been instrumental. 
