--- a/doc/dissertation/resources/introduction.tex
+++ b/doc/dissertation/resources/introduction.tex
@@ -1,126 +1,81 @@
-% Introduce the problem to be tackled
-% Use this as an opportunity to talk about the inspiration of the project
-% Contextualise the problem being tackled by the project
-% Explain why the problem is worthy of study
-% Outline the structure of the document and provide a framework for the reader of the dissertation. 
+\chapter{Introduction} % (fold)
+\label{cha:introduction}
+Modern software systems are seeing significant increases in complexity, with everything from flight computers to business software becoming harder to develop and reason about \citep{dvorak2009nasa}.
+As these systems grow, domain-specific logic becomes integrated throughout their code, leading to increased levels of coupling and more potential for bugs.
+With it, such a high level of coupling brings an increased risk that changes to the software cause modes of incorrect operation \citep{khawar2001developing}.\\
 
-\chapter{Project Introduction} % (fold)
-\label{cha:project_introduction}
-This section will:
+In a world where domain-logic is crucial to many large software systems, there has been a ``significant uptick in interest'' in the use of \glspl{dsl} \citep{fowler2010domain}.
+A \gls{dsl} is a limited, application-specific language that is integrated with another software system.
+The intent is thus to encode the domain rules and logic in a fashion extending beyond the syntactic constraints of the host language, represented using domain constructs and terminology \citep{Mernik:2005:DDL:1118890.1118892}.
+Through the use of a \gls{dsl}, a software system is able to avoid the aforementioned dispersion, centralising this domain logic using a common syntax, and making them easier to both change and verify.\\
+
+However, with this increasing centralisation of such core logic comes a risk: if that logic is wrong, then the entire system is going to act incorrectly.
+So what if it were possible to ensure that the \gls{dsl} was correct?
+What if it were possible to guarantee that it would always terminate, and always compute the right result?
+\textit{This} is the inspiration for this project, this is the reason behind \gls{absol}: providing a toolchain, including a \gls{metalanguage}, \gls{metacompiler} and verification framework for the creation and formal verification of embedded, executable Domain-Specific Languages.
+
+\section{A Problem Worth Studying} % (fold)
+\label{sec:a_problem_worth_studying}
+\glspl{dsl} are used throughout many industries, and arguably they bring major benefits in industries where safety is most critical.
+However, it is in these very industries that they cause major problems should they go wrong.\\
+
+Consider the inspiration for this project.
+During time spent at a financial technology company one team was observed to be using the \gls{gpl} OCaml for the specification of logic at runtime. 
+With the vastly greater than necessary expressive power offered by this language, the potential for bugs was significantly increased \citep{subramanyam2003empirical}.
+What if it were possible to design a capable \gls{dsl} that could be formally verified to replace the use of OCaml.
+It would both be a \textit{much} better fit to the domain \textit{and} reduce the potential for bugs.\\
+
+It is this kind of safety-critical system with which this project is concerned with.
+The ability to provide a method for designing and verifying \glspl{dsl} in these domains would do wonders for the safety of such systems and their runtime configuration behaviour.
+While, in general, language verification is undecideable, it is the focus of the project that is its salvation.
+Through limiting the kinds of programs that these languages can represent (an onerous restriction for \gls{gpl}, but one that is acceptable for a \gls{dsl}) it becomes possible to ensure that a given language is correct.\\
+
+As a result, the project aimed to produce two main novel contributions to the state of the art of language verification:
 \begin{itemize}
-    \item \textbf{Introduce the Project:} A brief overview of the inspiration for the project, and how that materialised as the project itself.
-    \item \textbf{Overview of Initial Concept}: The initial concept for the system.
-    \item \textbf{The Final System:} How that initial concept came to materialise as the final system.
-    \item \textbf{Document Overview:} An overview of what the dissertation aims to achieve, and it structure. 
+    \item \textbf{A Metalanguage:} An language for the specification of both the \gls{syntax} and \gls{semantics} of the \gls{dsl}. 
+    It would allow the representation of restricted forms of semantics to ensure that it is possible to prove the language correct.
+    As a result, the language specification could then be verified before being used to generate a \gls{dsl} compiler. 
+    \item \textbf{A Metacompiler:} A Haskell-based program that aims to generate a compiler, analysing the input language specification for correctness along the way.
+    This would ensure that no bugs can be introduced in the \gls{dsl} compiler implementation as it is generated directly from specification.
 \end{itemize}
 
-This project aims to create a framework and toolchain for the formal verification of embedded, executable Domain-Specific Languages.
-The hope is to allow the generation of provably correct, tailored programming languages that can encapsulate domain logic inside another program.
-These languages will be compiled through the use of a Haskell metacompiler (a compiler that generates a compiler) that takes both syntax and semantics for the Domain-Specific Language, generating executable libraries for embedding the DSL.
+While \gls{absol} never quite achieved the code-generation for the \gls{dsl} compiler, having ruled that feature as out of the project scope, it provides both the metalanguage and verification engine as robust contributions to the state of the art. 
 
-\section{An Introduction to Domain-Specific Languages} % (fold)
-\label{sec:an_introduction_to_domain_specific_languages}
-Modern software systems are increasing in complexity, with everything from flight computers to business software growing \citep{dvorak2009nasa}.
-As these systems grow, the domain logic is becoming integrated throughout the systems, leading to increased levels of coupling throughout the code.
-This means that there is an increased risk that changes to the software create modes of incorrect operation \citep{khawar2001developing}.\\
+% section a_problem_worth_studying (end)
 
-In reaction to the dispersion of domain logic throughout modern software systems, Domain-Specific Languages (DSLs) have seen ``a significant uptick in interest'' \citep{fowler2010domain}. 
-A DSL is a limited, application-specific language that is integrated with another software system, providing a custom encoding of domain rules and logic that can often go beyond the syntactic constraints of the host language \citep{Mernik:2005:DDL:1118890.1118892}.
-In the use of a DSL, software systems are able to centralise their domain logic using a common syntax, making it simple to change rules for the operation of the program.\\
+\section{Conceptualising ABSOL} % (fold)
+\label{sec:conceptualising_absol}
+The entire toolchain developed by this project is known as \acrshort{absol}, the \acrlong{absol}. 
+This term encompasses both the metalanguage and the metacompiler, though is often used to refer to the metacompiler directly.\\
 
-The term `Domain-Specific Language' is a broad one, encompassing a variety of embedded syntaxes for defining domain logic.
-Fowler defines `internal' and `external' DSLs.
-An internal DSL is written in the host language and exposed via an API, also known as a fluent interface.
-\cite{fowler2010domain} defines an external DSL, in contrast, as a language parsed independently of the host language.\\
+The initial concept for the system was to have a metalanguage for the specification of these \glspl{dsl}, and then have a software program (the metacompiler) that would be capable of processing this specification.
+At first, the notion of `processing' encompassed the parsing of the input file, its verification and then the generation of a \gls{dsl} compiler from that verified specification. 
+This was a mammoth task, and it swiftly became apparent that while the above stages would be the ideal end result, the project time-frame would not allow for it.\\
 
-In addition to their structure, Domain-Specific Languages can also be defined in terms of their `executability' \citep{Mernik:2005:DDL:1118890.1118892}.
-Many DSLs are programming languages with `well-defined execution semantics'.
-Examples of this are \LaTeX, a macro language for \TeX, and Template Haskell, which allows manipulation of Haskell code itself using Haskell \citep{Sheard:2002:TMH:581690.581691}.
-As a counterpoint, some DSLs only define configuration information for a software system, having no executable semantics of their own.
+Over time, \gls{absol} and its components underwent significant and rigorous design work, further solidifying the roles of each of the parts of the toolchain.
+It was through this development that the metalanguage became \gls{metaspec}, and evolved a robust feature-set for the designing of \glspl{dsl}.
+This same process resulted in the Metaparse and Metaverify modules of the metacompiler, performing language parsing and specification verification respectively.
+At the same time, however, this also led to the generation of the \gls{dsl} compiler being pushed out of the project scope.
 
-% section an_introduction_to_domain_specific_languages (end)
+% section conceptualising_absol (end)
 
-\section{The Need for Correct DSLs} % (fold)
-\label{sec:the_need_for_correct_dsls}
-Initial inspiration for this project was engendered by the observation of a financial technology company using the general-purpose programming language OCaml for specifying logic at runtime.
-As a Turing-complete programming language, this offered vastly greater expressive power than necessary for the domain in which it was applied.
-This meant an increase in the potential for bugs in the domain logic, as suggested by \cite{subramanyam2003empirical}.
-If a capable DSL could be designed that could have formally verified properties, then it would be a much better fit to the domain while reducing the capacity for bugs.\\
-
-While the scope of common DSLs is necessarily very broad, encompassing everything from executable program logic to statically defined configuration, this project aims to focus on a small subset of DSLs.
-As formal correctness only applies to executable programs, this project will focus on external, executable DSLs. 
-While analysis could benefit internal DSLs as well, they are already covered by traditional code review mechanisms, and would be hard to integrate into this project.\\
-
-Even with the ``detailed analysis and structuring of the application domain'' \citep{van2000domain} performed when initially defining the DSL, it can be difficult to verify the correctness of the resulting language. 
-While current methods can utilise code-review to attempt to analyse the correctness of the DSL implementation, a lack of understanding of the domain by the application developers may cause logic errors to be missed. 
-This is because the domain logic is often embodied by expert knowledge, as found by \cite{studer1998knowledge}. 
-It can hence be difficult to verify the language implementation with those domain experts, through code-review, due to their lack of understanding of the implementing language.
-As core domain logic, often integral to the program, is encapsulated by the DSL, it is instrumental that it be formally correct.\\
-
-This project aims to provide a solution for the sixth step of DSL design as proposed by \cite{van2000domain}: ``design and implement a compiler that translates DSL programs''. 
-While the logic that the DSL aims to encode can be verified with domain experts, it is often difficult to verify the resulting implementation.
-As the language semantics are integral to the operation of the DSL, providing the semantic analysis and verification as part of the toolchain will allow the automatic generation of DSLs.
-The generation from specification greatly reduces the potential for errors introduced during the implementation.
-An automated system offers benefits over manual review, as the domain experts can work with the DSL designers to encode the correct semantics before it becomes an executable program.
-
-% section the_need_for_correct_dsls (end)
-
-\section{Verification of DSL Semantics} % (fold)
-\label{sec:verification_of_dsl_semantics}
-While it would be desirable to design a system for verification of arbitrary DSL semantics, there are certain classes of problem in semantic verification which are not decidable \citep{abdulla1994undecidable}. \\
-
-This is most elegantly expressed in the duality of data and codata, or recursion and corecursion. 
-While recursively defined structures are decomposed from a state into certain `base-cases', providing a well-defined termination property, corecursion aims to start from a `base-case' and build data from there \citep{hinze2010reasoning}.
-As corecursion is dual to recursion, codata is the potentially infinite dual to data, which is necessarily finite. \\
-
-If the program semantics are limited to those that can be defined recursively rather than corecursively; that is, via structural induction rather than coinduction, then termination can be proven for such programs \citep{nordstrom1988terminating}.\\
-
-In the limited domain of recursively defined program semantics, this project aims to build on the work of \cite{doh2001composing}, drawing on the \textit{PlanCompS} project for specifying modular programming language semantics.
-It will also draw upon the work of Godel's `System-T', a theory of arithmetic for finite types that allows reasoning about arbitrarily-sized, finite data structures via structural induction \cite{girard1989proofs,alves2010godel}.\\
-
-The aim is to define a set of what Mosses terms `funcons' (\textit{fundamental constructs}); a set of semantic building blocks that can all be proven to terminate \cite{Churchill:2014:RCS:2577080.2577099}.
-Alongside a metalanguage that is able to specify both syntax and semantics for the DSL, the project aims to create a toolchain for verifying the DSL semantics and producing an executable library for the DSL.\\
-
-Using the metalanguage definition of the syntax and semantics for the DSL, the project toolchain will act as a metacompiler \cite{Mandell:1966:MDA:800267.810785}.
-This means it will produce an executable for the DSL via metacompilation and compilation steps.
-The provided semantics will allow decomposition, through structural induction, into the funcons, allowing the termination properties to be proved.
-The funcons and associated program code can then be composed to generate the program that matches the semantics defined for the DSL.\\
-
-% section verification_of_dsl_semantics (end)
-
-\section{The Novel Contribution of this Project} % (fold)
-\label{sec:the_novel_contribution_of_this_project}
-This project aims to make a novel research contribution through the creation of two main components:
+\section{Outlining the Dissertation} % (fold)
+\label{sec:outlining_the_dissertation}
+This document aims to provide a comprehensive overview of the design and development of \gls{absol}. 
 \begin{itemize}
-    \item \textbf{A DSL Metalanguage:} A metalanguage for the specification of the syntax of a DSL, along with its associated semantics. 
-    The syntactic notation will likely be based upon the Extended Backus-Naur Form, a metasyntax notation for expressing languages whose syntax matches a context-free grammar. 
-    The corresponding semantic notations will likely be based on the conventional big-step operational semantics \citep{Schmidt:2003:PLS:1074100.1074733} devised for automatic compiler generation \citep{diehl1996semantics}.
-    \item \textbf{A Metacompiler:} This metacompiler program will take a DSL description in the above metalanguage, and a program in the described DSL, and produce a working executable from this. 
-    This may operate in a single-step or multipass process, depending on what makes for the most simple metacompiler architecture.
+    \item It will start by providing an in-depth examination of the required background material in the form of the \nameref{cha:literature_and_technology_survey}, giving the reader a firm grounding in the theory required to understand the project as a whole.
+    \item Following from the \nameref{cha:literature_and_technology_survey}, the document will examine the context in which the project exists, drawing conclusions and forming project requirements as part of the \nameref{cha:elucidation}.
+    \item With the requirements for \gls{absol} firmly established, the document will go on to explore the process by which \gls{metaspec}, the metalanguage, came to exist in \nameref{cha:designing_the_metalanguage}.
+    \item With the metalanguage, a precursor to designing the toolchain itself, now established, the following chapter will examine the design of the metacompiler and the algorithms underlying the verification in detail.
+    This is \nameref{cha:architecture_and_algorithms}.
+    \item Having provided the reader with a comprehensive overview of the design work of the project, the next chapter proceeds to detail the \nameref{cha:implementation} of the metacompiler toolchain.
+    \item Implementation complete, the document discusses the \nameref{cha:testing} process applied to the software, highlighting key results and demonstrating an application of the toolchain via an example \gls{dsl}.
+    \item Finally, the document concludes with an \nameref{cha:evaluation} of the project as a whole, highlighting the contributions to the state of the art as well as discussing the major successes and deficiencies of the project.
 \end{itemize}
 
-Through limiting scope to just recursively defined semantic constructs, and omitting consideration of corecursive constructs, this project will be able to produce a useful metacompiler for a set of language semantics within which arbitrary DSLs can be constructed. 
+This provides but a brief overview of what the reader has in store over the course of this document, so the best thing is to dive right in.
+Please, don't forget to enjoy yourself!
 
-% section the_novel_contribution_of_this_project (end)
+% section outlining_the_dissertation (end)
 
-\section{Project Objectives} % (fold)
-\label{sec:project_objectives}
-The main objectives of this project are as follows:
-\begin{itemize}
-    \item Conduct research on methods for the syntactic description of fundamental program syntax and semantics.
-    \item Use the knowledge gained from this research to develop the \textit{Absol}\footnote{Automatic Builder for Semantically Organised Languages: The name of the metacompiler toolchain} metalanguage to describe the syntax and semantics of an arbitrary domain-specific language.
-    \item Define a set of basic \textit{funcons} as fundamental building blocks for programs with purely recursively defined semantics. 
-    These building blocks will have trivially true termination properties.
-    \item Describe methods for semantic decomposition, allowing the program semantics specified using \textit{Absol} to be decomposed to the \textit{funcons}, allowing termination proof for the semantics via structural induction (they are all total functions, and compositions of total functions are also total).
-    Structurally recursive semantic definitions allow us to decompose the semantics to the \textit{funcons}, as long as we can express all DSL semantics in terms of these building blocks. 
-    \item Development of a basic DSL using the metalanguage.
-    \item Development of a minimum working example for the metacompiler using hand-implemented semantics based on the \textit{Absol} metalanguage.
-    \item Development of a working metacompiler that can ingest a description of the DSL's syntax and semantics using \textit{Absol}, as well as a program in the DSL itself, and produce a working executable program.
-    \item Creation of a more-capable and useful DSL with additional capabilities.
-    \item Evaluate the metacompiler in terms of real-world utility and theoretical contribution based on the requirements and the theoretical and practical impact in relation to the literature surveyed.
-\end{itemize}
-
-
-% section project_objectives (end)
-
-% chapter project_introduction (end)
+% chapter introduction (end)
